2010-04-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* [ 2978514 ] Compilation with --enable-jdbc fails
	(patch by Klaus Kampf)

2010-04-09  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* [ 2984214 ] double free error cimXmlGen.c: triggered by AssocatorNames 
	(patch by Chad Smith)

2010-04-07  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, sfcBroker.c, mlog.h, mlog.c:
	[ 2982924 ] Use a logging process to write to syslog

	* providerDrv.c:
	[ 2979028 ] Modify SFCB to not abort for socket errors 
	(patch by John Powell)

	* queryStatement.c:
	[ 2979030 ] Restart the lexer when filter creation ends in a parsing err
	
2010-04-01 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* 20_indication.mof, profileProvider.c, interopServerProvider.c:
	[ 2980820 ] Indication Profile 1.1 New attr values.

2010-03-29 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimXmlRequest.c, msgqueue.c, msgqueue.h, providerMgr.c:
	[ 2961560 ] Disallow InvokeMethod calls to internal provider methods

2010-03-22  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* providerRegister.c:
	[ 2974807 ] Can't have > 2 providers registered for the same classname

2010-03-12  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 2969129 ] Missing dlclose() in httpAdapter.c
	(patch by Tim Potter)

2010-03-12 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* value.c:
	[ 2968656 ] cimcClientSfcbLocal.c does not clone return value
	(patch by Klaus Kaempf)

2010-03-12 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* value.c:
	[ 2968198 ] CMPI_chars in sfcb - see #2967257
	(patch by Klaus Kaempf)

2010-03-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	[ 2968246 ] connect2 builds unnecessary struct

2010-03-09 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* instance.c:
	[ 2966804 ] setObjectPath returns uninitialized pointer

2010-03-08  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c: