@@ -27,6 +27,7 @@ Bugs fixed:
 - 2979030 Restart the lexer when filter creation ends in a parsing err
 - 2984214 double free error cimXmlGen.c: triggered by AssocatorNames
 - 2978514 Compilation with --enable-jdbc fails
+- 2979043 Fix leak in msgqueue.c during an error condition
 
 Changes in 1.3.7
 ================
